--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 spring.datasource.driver-class  -name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/lgcns
 spring.datasource.username= root
-spring.datasource.password= 022skt342m!
+spring.datasource.password= angel33044@
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=true
